[package]
name = "arkworks-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "0.4.2"
ark-relations = "0.4.0"
ark-bls12-381 = "0.4.0"
ark-groth16 = "0.4.0"
ark-serialize = "0.4.2"
ark-snark = "0.4.0"
ark-std = "0.4.0"
ark-ec = "0.4.0"
rand_core = { version = "0.6.4", features = ["getrandom"] }

